force-app/main/default/objects/Account__c/Account__c.object-meta.xml
<CustomObject>
    <label>Account Custom</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>