force-app/main/default/objects/Account__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Outlet__c</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>