force-app/main/default/objects/Account__c/fields/Nearest_Distance__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Distance__c</fullName>
    <formula>IF(ISPICKVAL( Options__c , &apos;New Delhi&apos;) , &apos;Nearest Distance is 100m&apos;,  
IF(ISPICKVAL( Options__c , &apos;Kolkata&apos;), &apos;Nearest Distance is 1Km&apos;, &apos;Nearest Distance is 10Km&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nearest Distance</label>
    <type>Text</type>
</CustomField>